# teg-crm

./: .gitignore  ARCHITECTURE.md  BIOTECH_SETUP_COMPLETE.md  COMPLETE_DEPLOYMENT_SUMMARY.md  DEPLOYMENT_COMPLETE.md  README_COMPLETE_SYSTEM.md  READY_TO_DEPLOY.txt  TEST_RESULTS.md  docker-compose.yml
.gemini/: instructions.md
teg-crm/: .dockerignore  .env.example  .gitignore  Dockerfile  STRUCTURE.md  entrypoint.py  pyproject.toml  requirements.txt  seed.py
teg-crm-web/: .dockerignore  .env.local.example  BUILD_COMPLETE_PLAN_SUMMARY.md  Dockerfile  FEATURE_PROPOSAL_SUMMARY.md  IMPLEMENTATION_INDEX.md  PLANNING_COMPLETE.md  READY_TO_BUILD.md  SESSION_1_QUICK_START.md  TEST_REPORT.md  convert.js  index.html  middleware.ts  next.config.ts  package-lock.json  package.json  playwright.config.ts  tsconfig.json  vite.config.ts
teg-crm/.github/workflows/: weekly_report.yml
teg-crm/crm/: __init__.py  settings.py  urls.py  wsgi.py
teg-crm/crm/contacts/: __init__.py  admin.py  apps.py  models.py  serializers.py  views.py
teg-crm/crm/contacts/migrations/: 0001_initial.py  0002_alter_contact_linkedin_url.py  0002_contact_event.py  0003_add_profile_headline_and_seed_team.py  0004_savedmessage.py
teg-crm/docs/: architecture.md  quick_start.md  setup_guide.md
teg-crm/docs/superpowers/plans/: 2026-05-27-phase-1-foundation.md
teg-crm/scripts/: discover_users.py  setup_notion_dbs.py
teg-crm/src/: config.py
teg-crm/src/dashboard/: generate_dashboard.py  template.html
teg-crm/src/importer/: apify_importer.py  csv_importer.py  excel_csv_importer.py
teg-crm/src/linkedin/: apollo_importer.py  contact_logger.py  message_gen.py  outreach_queue.py
teg-crm/src/reminders/: follow_up_bot.py
teg-crm/src/reports/: weekly_report.py
teg-crm/tests/: conftest.py  test_api.py  test_apollo_importer.py  test_config.py  test_contact_logger_v2.py  test_dashboard.py  test_importer.py  test_message_gen.py  test_notion_helpers.py  test_outreach_queue.py  test_reminders.py
teg-crm/tests/api/: test_crud_mocks.py
teg-crm/tests/importer/: test_apify_importer.py  test_excel_csv_importer.py
teg-idea_workflow/: .env.example  (+3 more)
(+325 files in other folders)
